swagger수정 및 전체적으로 구현 수정
